--- a/src/stylesheets/fonts.scss
+++ b/src/stylesheets/fonts.scss
@@ -1,4 +1,5 @@
-$cygre-reg: "../fonts/Cygre/Cygre-Regular.woff";
-$cygre-reg-it: "../fonts/Cygre/Cygre-RegularIt.woff";
-$cygre-med: "../fonts/Cygre/Cygre-Medium.woff";
-$mutabor: "../fonts/Mutabor/Mutabor.woff";
+$cygre-reg: '../fonts/Cygre/Cygre-Regular.woff';
+$cygre-reg-it: '../fonts/Cygre/Cygre-RegularIt.woff';
+$cygre-med: '../fonts/Cygre/Cygre-Medium.woff';
+$mutabor: '../fonts/Mutabor/Mutabor.woff';
+$voxel: '../fonts/Voxel/Voxel.woff';
