--- a/src/index.css
+++ b/src/index.css
@@ -7,3 +7,4 @@
 @import 'stylesheets/index.scss';
 @import 'stylesheets/collector.scss';
 @import 'stylesheets/about_project.scss';
+@import 'stylesheets/styleguide.scss';
