--- a/src/stylesheets/index.scss
+++ b/src/stylesheets/index.scss
@@ -7,15 +7,27 @@ html,
 body {
   font-size: 16px;
   background-color: $white;
+
+  // хедер
+
   .header {
     z-index: 100;
-    background-color: $pink;
+    background-color: $white;
     width: 100%;
     height: 3.7rem;
     position: relative;
     font-family: 'Cygre', sans-serif;
     display: flex;
     justify-content: space-between;
+
+    a {
+      position: relative;
+
+      > img {
+        padding: 1rem 3rem;
+        width: 3rem;
+      }
+    }
     .menu {
       display: inline-flex;
       align-items: flex-start;
@@ -30,8 +42,8 @@ body {
         align-items: center;
         gap: 0.625rem;
         border-radius: 10rem;
-        background-color: $white;
-        color: $black;
+        background-color: $pink;
+        color: $white;
         -webkit-user-select: none;
         -khtml-user-select: none;
         -moz-user-select: none;
@@ -51,13 +63,16 @@ body {
       margin-top: 1%;
       p {
         padding: 0.5rem 2rem;
-        outline: 2px solid $white;
+        outline: 2px solid $pink;
         border-radius: 10rem;
-        color: $white;
+        color: $pink;
         padding-right: 7.5rem;
       }
     }
   }
+
+  // подвал
+
   .podval {
     font-size: 1rem;
     font-family: 'Cygre', sans-serif;
@@ -105,6 +120,61 @@ body {
       height: 100%;
       > p:first-child {
         font-size: 1.5rem;
+      }
+    }
+  }
+
+  // карточки на сайте
+
+  .card {
+    position: relative;
+    padding: 0.6rem 0.6rem;
+    box-sizing: border-box;
+    height: 17rem;
+    width: 15rem;
+    outline: 3px solid $pink;
+    border-radius: 1.5rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    h1 {
+      font-size: 2rem;
+      position: relative;
+      width: 10rem;
+    }
+    div {
+      position: relative;
+      display: flex;
+      gap: 0.5rem;
+      flex-direction: column;
+      align-items: flex-start;
+    }
+    p {
+      border-radius: 10rem;
+      position: relative;
+      padding: 0.5rem 2rem;
+      justify-content: center;
+      gap: 0.5rem;
+    }
+    p:first-child {
+      background-color: $orange;
+      color: $white;
+    }
+    p:nth-child(2) {
+      background-color: $pink;
+      color: $orange;
+    }
+  }
+  .test {
+    background-size: 100%;
+    background-repeat: no-repeat;
+    background-image: url('images/main_page/paper_back_card.jpg');
+  }
+  .video {
+    background-color: $pink;
+    div {
+      p:last-child {
+        outline: 2px solid $white;
       }
     }
   }
@@ -212,60 +282,6 @@ body.index {
     flex-wrap: wrap;
     justify-content: center;
     gap: 1rem;
-
-    .test {
-      background-size: 100%;
-      background-repeat: no-repeat;
-      background-image: url('images/main_page/paper_back_card.jpg');
-    }
-    .video {
-      background-color: $pink;
-      div {
-        p:last-child {
-          outline: 2px solid $white;
-        }
-      }
-    }
-
-    .card {
-      position: relative;
-      padding: 0.6rem 0.6rem;
-      box-sizing: border-box;
-      height: 17.5rem;
-      width: 15.5rem;
-      outline: 3px solid $pink;
-      border-radius: 1.5rem;
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
-      h1 {
-        font-size: 2rem;
-        position: relative;
-        width: 10rem;
-      }
-      div {
-        position: relative;
-        display: flex;
-        gap: 0.5rem;
-        flex-direction: column;
-        align-items: flex-start;
-      }
-      p {
-        border-radius: 10rem;
-        position: relative;
-        padding: 0.5rem 2rem;
-        justify-content: center;
-        gap: 0.5rem;
-      }
-      p:first-child {
-        background-color: $orange;
-        color: $white;
-      }
-      p:nth-child(2) {
-        background-color: $pink;
-        color: $orange;
-      }
-    }
   }
   .screen_3 {
     position: relative;
