--- a/src/stylesheets/index.scss
+++ b/src/stylesheets/index.scss
@@ -3,6 +3,10 @@ $orange: #ef7c05;
 $white: #f4f4f4;
 $black: #001806;
 
+.components {
+  margin-top: 8px;
+  margin-left: 8px;
+}
 html,
 body {
   font-size: 16px;
