--- a/src/stylesheets/vars.scss
+++ b/src/stylesheets/vars.scss
@@ -1,10 +1,7 @@
 :root {
-    --white: #ffffff;
-    --black: #000000;
-    --dark: #737373;
-    --middle: #979797;
-    --light: #dedede;
-    --pink: #ff0aa9;
-    --fontSize: 16px;
+  --orange: #f4762e;
+  --back-grey: #f2f2f2;
+  --white: #fafafa;
+  --black: #0d0d0d;
+  --light-orange: #f7ebe4;
 }
-$mgTop: 2vw;
