--- a/src/stylesheets/index.scss
+++ b/src/stylesheets/index.scss
@@ -1,345 +1,10 @@
-$pink: #f6cfe2;
-$orange: #ef7c05;
-$white: #f4f4f4;
-$black: #001806;
-
 .components {
   margin-top: 8px;
   margin-left: 8px;
 }
-html,
-body {
-  font-size: 16px;
-  background-color: $white;
-
-  // хедер
-
-  .header {
-    z-index: 100;
-    background-color: $white;
-    width: 100%;
-    height: 3.7rem;
-    position: relative;
-    font-family: 'Cygre', sans-serif;
-    display: flex;
-    justify-content: space-between;
-
-    a {
-      position: relative;
-
-      > img {
-        padding: 1rem 3rem;
-        width: 3rem;
-      }
-    }
-    .menu {
-      display: inline-flex;
-      align-items: flex-start;
-      gap: 0.5rem;
-      position: relative;
-      margin-left: 7.5%;
-      margin-top: 1%;
-      p {
-        display: flex;
-        padding: 0.5rem 2rem;
-        justify-content: center;
-        align-items: center;
-        gap: 0.625rem;
-        border-radius: 10rem;
-        background-color: $pink;
-        color: $white;
-        -webkit-user-select: none;
-        -khtml-user-select: none;
-        -moz-user-select: none;
-        -ms-user-select: none;
-        user-select: none;
-        transition: 0.1s;
-      }
-      p:hover {
-        color: $white;
-        background-color: $orange;
-        transition: 0.1s;
-      }
-    }
-    .search {
-      position: relative;
-      margin-right: 7.5%;
-      margin-top: 1%;
-      p {
-        padding: 0.5rem 2rem;
-        outline: 2px solid $pink;
-        border-radius: 10rem;
-        color: $pink;
-        padding-right: 7.5rem;
-      }
-    }
-  }
-
-  // подвал
-
-  .podval {
-    font-size: 1rem;
-    font-family: 'Cygre', sans-serif;
-    position: relative;
-    width: 100%;
-    height: 9rem;
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-    align-content: flex-end;
-    box-sizing: border-box;
-    padding: 2rem 6.5rem;
-    color: $white;
-    background-color: $orange;
-
-    > div:first-child {
-      width: 6rem;
-      display: flex;
-      align-content: space-between;
-      flex-wrap: wrap;
-      height: 100%;
-      > div {
-        display: flex;
-        position: relative;
-        gap: 0.5rem;
-        img {
-          position: relative;
-        }
-      }
-    }
-    > p {
-      font-family: 'Voxel', sans-serif;
-      font-size: 3.5rem;
-      position: relative;
-      display: flex;
-      flex-direction: column-reverse;
-      padding-left: 2rem;
-      top: 1rem;
-    }
-    > div:last-child {
-      width: 8rem;
-      display: flex;
-      align-content: space-between;
-      flex-wrap: wrap;
-      height: 100%;
-      > p:first-child {
-        font-size: 1.5rem;
-      }
-    }
-  }
-
-  // карточки на сайте
-
-  .card {
-    position: relative;
-    padding: 0.6rem 0.6rem;
-    box-sizing: border-box;
-    height: 17rem;
-    width: 15rem;
-    outline: 3px solid $pink;
-    border-radius: 1.5rem;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    h1 {
-      font-size: 2rem;
-      position: relative;
-      width: 10rem;
-    }
-    div {
-      position: relative;
-      display: flex;
-      gap: 0.5rem;
-      flex-direction: column;
-      align-items: flex-start;
-    }
-    p {
-      border-radius: 10rem;
-      position: relative;
-      padding: 0.5rem 2rem;
-      justify-content: center;
-      gap: 0.5rem;
-    }
-    p:first-child {
-      background-color: $orange;
-      color: $white;
-    }
-    p:nth-child(2) {
-      background-color: $pink;
-      color: $orange;
-    }
-  }
-  .test {
-    background-size: 100%;
-    background-repeat: no-repeat;
-    background-image: url('images/main_page/paper_back_card.jpg');
-  }
-  .video {
-    background-color: $pink;
-    div {
-      p:last-child {
-        outline: 2px solid $white;
-      }
-    }
-  }
-}
-
-.mut {
-  font-family: 'Mutabor', sans-serif;
-}
-
-.cyg {
-  font-family: 'Cygre', sans-serif;
-}
-
-.cygit {
-  font-family: 'Cygre', sans-serif;
-  font-style: italic;
-}
-
-body.index {
-  .back_1 {
-    top: 301.5vh;
-    width: 100%;
-    height: 12vw;
-    position: absolute;
-    background-image: url('images/main_page/podval.jpg');
-    background-size: 100%;
-    background-repeat: no-repeat;
-    opacity: 30%;
-    z-index: 10;
-    // display: none;
-  }
-
-  .screen_1 {
-    position: relative;
-    height: 100vh;
-    div:first-child {
-      margin-top: -4rem;
-      justify-content: space-between;
-      display: flex;
-      img {
-        position: relative;
-        width: 28rem;
-        display: flex;
-      }
-      img:nth-child(2) {
-        top: 9rem;
-        height: 30rem;
-        width: auto;
-      }
-    }
-    div:nth-child(2) {
-      position: relative;
-      margin: 0 auto;
-      height: 20rem;
-      width: 33rem;
-      z-index: 1;
-      top: -20rem;
-      text-align: center;
-      color: $orange;
-      font-family: 'Voxel', sans-serif;
-      background-size: 100%;
-      background-repeat: no-repeat;
-      background-image: url('images/main_page/paper.png');
-
-      p {
-        // color: $orange;
-        position: relative;
-        margin: 0 auto;
-        text-align: center;
-        padding-top: 18%;
-        font-size: 6rem;
-      }
-    }
-  }
-  .filter {
-    position: relative;
-    height: 2rem;
-    display: flex;
-    margin: 2rem 7rem;
-    justify-content: space-between;
-    p {
-      font-size: 3.5rem;
-      font-family: 'Voxel', sans-serif;
-      color: $pink;
-      transition: 0.1s;
-      -webkit-user-select: none;
-      -khtml-user-select: none;
-      -moz-user-select: none;
-      -ms-user-select: none;
-      user-select: none;
-    }
-    p:first-child {
-      color: $orange;
-    }
-    p:hover {
-      color: $orange;
-      transition: 0.1s;
-    }
-  }
-  .screen_2 {
-    position: relative;
-    font-family: 'Cygre', sans-serif;
-    padding: 3rem 1rem;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    gap: 1rem;
-  }
-  .screen_3 {
-    position: relative;
-    font-family: 'Voxel', sans-serif;
-    font-size: 3.5rem;
-    display: flex;
-    p:hover {
-      color: $pink;
-      transition: 0.1s;
-    }
-    p {
-      color: $orange;
-
-      position: absolute;
-      z-index: 1;
-      transition: 0.1s;
-      -webkit-user-select: none;
-      -khtml-user-select: none;
-      -moz-user-select: none;
-      -ms-user-select: none;
-      user-select: none;
-    }
-    img {
-      position: relative;
-      height: 43rem;
-      margin-left: 11%;
-    }
-    p:nth-child(1) {
-      top: 7%;
-      left: 8%;
-    }
-    p:nth-child(2) {
-      top: 35%;
-      left: 18%;
-    }
-    p:nth-child(3) {
-      top: 57%;
-      left: 8%;
-    }
-    p:nth-child(4) {
-      top: 71%;
-      left: 25%;
-    }
-    p:nth-child(5) {
-      top: 20%;
-      left: 49%;
-    }
-    p:nth-child(6) {
-      top: 51%;
-      left: 70%;
-    }
-    p:nth-child(7) {
-      top: 86%;
-      left: 57%;
-    }
-  }
+input,
+textarea,
+select {
+  -webkit-appearance: none;
+  -moz-appearance: none;
 }
