adding more components

--- a/src/fonts.css
+++ b/src/fonts.css
@@ -2,3 +2,7 @@
   font-family: 'Phlatt Grotesk';
   src: url('/fonts/Phlatt Grotesk/PhlattGrotesk-Regular.woff');
 }
+@font-face {
+  font-family: 'Pitagon Sans Mono';
+  src: url('/fonts/Pitagon Sans Mono/Pitagon Sans Mono-Regular.woff2');
+}
