--- a/src/stylesheets/components/atoms/a_main-menu.scss
+++ b/src/stylesheets/components/atoms/a_main-menu.scss
@@ -1,7 +1,43 @@
+//buttons and tags
 .a_main-menu {
   color: var(--black, #0d0d0d);
   text-align: center;
   font-family: 'Phlatt Grotesk';
   font-size: 1rem;
   line-height: 120%;
+  transition: 0.15s;
+
+  &:hover {
+    color: var(--orange);
+  }
+}
+
+.a_tags {
+  display: inline-flex;
+  padding: 0.125rem 0.5rem;
+  border-radius: 2rem;
+  font-family: 'Phlatt Grotesk';
+  font-size: 0.75rem;
+  &.orange {
+    border: 1px solid var(--orange);
+    color: var(--orange);
+  }
+  &.white {
+    border: 1px solid var(--white);
+    color: var(--white);
+  }
+}
+
+//text for cards
+.a_card-title {
+  font-family: 'Pitagon Sans Mono';
+  font-size: 2rem;
+  line-height: 110%;
+  width: 14rem;
+  &.orange {
+    color: var(--orange);
+  }
+  &.white {
+    color: var(--white);
+  }
 }
