--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 @import 'stylesheets/reset.scss';
 @import 'stylesheets/fonts.scss';
 @import 'stylesheets/vars.scss';
-@import 'stylesheets/articles.scss';
+/* @import 'stylesheets/articles.scss'; */
 /* @import 'stylesheets/videos.scss';
 @import 'stylesheets/tests.scss'; */
 @import 'stylesheets/index.scss';
