--- a/src/partials/header-section.html
+++ b/src/partials/header-section.html
@@ -12,6 +12,9 @@
     <form action="../videos.html">
       <button class="A_main-menu">видео</button>
     </form>
+    <form action="">
+      <button class="A_main-menu" style="color: var(--orange)">музей</button>
+    </form>
   </div>
   <form>
     <input class="M_search" type="text" placeholder="найти..." />
