--- a/src/stylesheets/components/atoms/atoms.scss
+++ b/src/stylesheets/components/atoms/atoms.scss
@@ -4,8 +4,20 @@ h1 {
   font-size: 80px;
   line-height: 120%;
 
-  @media (max-width: 420px) {
+  @media (max-width: 764px) {
+    font-size: 72px;
+  }
+
+  @media (max-width: 530px) {
+    font-size: 64px;
+  }
+
+  @media (max-width: 474px) {
     font-size: 56px;
+  }
+
+  @media (max-width: 440px) {
+    font-size: 48px;
   }
 }
 
@@ -225,11 +237,19 @@ h6 {
 .A_cover-lead {
   @include font(var(--black), 'Phlatt Grotesk', 1rem);
   padding: 0 0.5rem;
+  @media (max-width: 530px) {
+  }
+
+  @media (max-width: 440px) {
+    width: 20rem;
+    text-align: center;
+    margin: 0 auto;
+  }
 }
 
 .A_videos-cover {
-  width: 42.125rem;
-  height: 21.875rem;
+  width: 32.125rem;
+  height: 18.875rem;
   @include cover;
   &.Image-type {
     background-image: url('./././images/articles/article-kletki-dlya-detki.jpg');
