--- a/src/stylesheets/components/organisms/organisms.scss
+++ b/src/stylesheets/components/organisms/organisms.scss
@@ -117,6 +117,14 @@
 
 //test
 
+.Correct {
+  background-color: green;
+}
+
+.Wrong {
+  background-color: red;
+}
+
 .O_test-content {
   display: inline-flex;
   flex-direction: column;
@@ -129,6 +137,18 @@
   height: 23.1875rem;
   margin: 4rem 0;
   box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.05);
+
+  @media (max-width: 764px) {
+    width: 30rem;
+  }
+
+  @media (max-width: 530px) {
+    width: 24rem;
+  }
+
+  @media (max-width: 440px) {
+    width: 20rem;
+  }
 }
 
 .O_test-progress-container {
