--- a/src/stylesheets/tests.scss
+++ b/src/stylesheets/tests.scss
@@ -6,6 +6,9 @@
   }
 }
 .test {
+  .W_section-lead {
+    max-width: 48.5rem;
+  }
   width: 100%;
   display: inline-flex;
   flex-direction: column;
