--- a/src/partials/rec-cards-tests.html
+++ b/src/partials/rec-cards-tests.html
@@ -2,15 +2,18 @@
   <h2 class="A_title-text">больше тестов</h2>
   <div class="C_tests">
     <div class="O_test-card">
-      <a href="articles.html">
+      <a href="tests/unusual-horse.html" target="_blank">
         <div class="O_card-text-content">
-          <h4 class="A_card-title White">example</h4>
+          <h4 class="A_card-title White">необычная лошадь</h4>
           <div class="C_tags White">
-            <p class="A_tag">example</p>
-            <p class="A_tag">example</p>
-            <p class="A_tag">example</p>
+            <p class="A_tag">смешное</p>
+            <p class="A_tag">бытовое</p>
+            <p class="A_tag">промышленность</p>
           </div>
-          <p class="A_card-text Test-Article">example</p>
+          <p class="A_card-text Test-Article">
+            тест по&nbsp;статье &laquo;вот это киберпанк&raquo; . смело
+            проверяйте свои знания
+          </p>
         </div>
       </a>
     </div>
@@ -31,28 +34,33 @@
       </a>
     </div>
     <div class="O_test-card">
-      <a href="articles.html">
+      <a href="tests/unusual-horse.html" target="_blank">
         <div class="O_card-text-content">
-          <h4 class="A_card-title White">example</h4>
+          <h4 class="A_card-title White">просто молния</h4>
           <div class="C_tags White">
-            <p class="A_tag">example</p>
-            <p class="A_tag">example</p>
-            <p class="A_tag">example</p>
+            <p class="A_tag">современнное</p>
+            <p class="A_tag">смешное</p>
+            <p class="A_tag">интересное</p>
           </div>
-          <p class="A_card-text Test-Article">example</p>
+          <p class="A_card-text Test-Article">
+            проверьте, насколько вы&nbsp;запомнили статью про необычное авто
+          </p>
         </div>
       </a>
     </div>
     <div class="O_test-card">
-      <a href="articles.html">
+      <a href="tests/not-the-least-bit-weird.html" target="_blank">
         <div class="O_card-text-content">
-          <h4 class="A_card-title White">example</h4>
+          <h4 class="A_card-title White">ни капельки ни странно</h4>
           <div class="C_tags White">
-            <p class="A_tag">example</p>
-            <p class="A_tag">example</p>
-            <p class="A_tag">example</p>
+            <p class="A_tag">бытовое</p>
+            <p class="A_tag">современное</p>
+            <p class="A_tag">интересное</p>
           </div>
-          <p class="A_card-text Test-Article">example</p>
+          <p class="A_card-text Test-Article">
+            хорошо&nbsp;ли вы&nbsp;запомнили статью &laquo;Ни&nbsp;капельки
+            не&nbsp;странно&raquo;?
+          </p>
         </div>
       </a>
     </div>
