--- a/src/stylesheets/components/organisms/organisms.scss
+++ b/src/stylesheets/components/organisms/organisms.scss
@@ -243,6 +243,9 @@
     .M_search {
       display: none;
     }
+    .A_burger {
+      display: block;
+    }
   }
   @media (min-width: 760px) and (max-width: 800px) {
     .M_search {
