--- a/src/partials/header-section.html
+++ b/src/partials/header-section.html
@@ -32,4 +32,20 @@
   <form>
     <input class="M_search" type="text" placeholder="найти..." />
   </form>
+  <svg
+    class="A_burger"
+    xmlns="http://www.w3.org/2000/svg"
+    width="20"
+    height="19"
+    viewBox="0 0 20 19"
+    fill="none"
+  >
+    <path
+      d="M1 1.53906H19M1 9.53906H19M1 17.5391H19"
+      stroke="#0D0D0D"
+      stroke-width="2"
+      stroke-linecap="round"
+      stroke-linejoin="round"
+    />
+  </svg>
 </div>
