--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,5 +1,5 @@
 <div class="O_header">
-  <form action="/">
+  <form action="./">
     <button class="A_logo Black">
       <svg
         xmlns="http://www.w3.org/2000/svg"
