--- a/src/partials/rec-cards-article.html
+++ b/src/partials/rec-cards-article.html
@@ -2,7 +2,7 @@
   <h2 class="A_title-text">больше статей</h2>
   <div class="C_articles">
     <div class="O_article-card">
-      <a href="../articles/speed-i-am-speed.html" target="_blank">
+      <a href="../articles/speed-i-am-speed.html">
         <!-- <img
           src="../images/cards/sharolet-card-cover.jpg"
           alt="дядя с трубой"
@@ -23,7 +23,7 @@
       </a>
     </div>
     <div class="O_article-card">
-      <a href="../articles/cooler-than-lightning.html" target="_blank">
+      <a href="../articles/cooler-than-lightning.html">
         <!-- <img
           src="../images/cards/sharolet-card-cover.jpg"
           alt="дядя с трубой"
@@ -56,7 +56,7 @@
       </a>
     </div>
     <div class="O_article-card">
-      <a href="../articles/lets-read.html" target="_blank">
+      <a href="../articles/lets-read.html">
         <!-- <img
           src="../images/cards/sharolet-card-cover.jpg"
           alt="дядя с трубой"
