--- a/src/stylesheets/index.scss
+++ b/src/stylesheets/index.scss
@@ -8,7 +8,7 @@
 body {
   background-color: var(--back-grey);
   min-width: 360px;
-  hyphens: auto;
+  // hyphens: auto;
 
   // hyphens: auto;
   // hyphenate-limit-chars: 6 3 2;
@@ -48,7 +48,7 @@ body.bug {
   }
 }
 
-.main-page {
+body.main-page {
   width: 100%;
   display: inline-flex;
   flex-direction: column;
