--- a/src/stylesheets/components/atoms/atoms.scss
+++ b/src/stylesheets/components/atoms/atoms.scss
@@ -482,6 +482,12 @@ h6 {
 
 //footer
 
+.A_text-large {
+  position: relative;
+  height: auto;
+  width: 100%;
+}
+
 .A_form-message {
   @include font(var(--white), 'Pitagon Sans Mono');
   width: inherit;
@@ -492,7 +498,7 @@ h6 {
   // padding: 0 0 0 5rem;
 
   margin: 0 auto;
-
+  // position: absolute;
   @include font(var(--black), 'Phlatt Grotesk', 10rem, default, uppercase);
   // margin: 0 auto;
   @media (min-width: 1440px) {
