--- a/src/stylesheets/components/organisms/organisms.scss
+++ b/src/stylesheets/components/organisms/organisms.scss
@@ -8,6 +8,12 @@
   background: var(--light-orange);
   box-shadow: 0px 0px 15px 0px rgba(239, 126, 5, 0.3);
 
+  &.pos-absolut {
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: block;
+  }
   a {
     display: flex;
     flex-direction: column;
