--- a/src/stylesheets/index.scss
+++ b/src/stylesheets/index.scss
@@ -58,3 +58,13 @@ body.main-page {
     width: auto;
   }
 }
+
+body.articles {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  > .C_tags {
+    margin-top: 3.5rem;
+  }
+}
