--- a/src/stylesheets/index.scss
+++ b/src/stylesheets/index.scss
@@ -4,6 +4,14 @@
   margin-right: 8px;
   // margin: 0 auto;
 }
+
+.none {
+  display: none;
+}
+
+.pos-absolut {
+  position: absolute;
+}
 body {
   background-color: var(--back-grey);
   min-width: 360px;
