--- a/src/stylesheets/components/atoms/atoms.scss
+++ b/src/stylesheets/components/atoms/atoms.scss
@@ -66,6 +66,10 @@ h6 {
   padding: 0.125rem 0.5rem;
   border-radius: 2rem;
   height: fit-content;
+
+  &.active {
+    background-color: aqua;
+  }
 }
 
 //cards
@@ -482,6 +486,12 @@ h6 {
 
 //footer
 
+.A_text-large {
+  position: relative;
+  height: auto;
+  width: 100%;
+}
+
 .A_form-message {
   @include font(var(--white), 'Pitagon Sans Mono');
   width: inherit;
@@ -492,7 +502,7 @@ h6 {
   // padding: 0 0 0 5rem;
 
   margin: 0 auto;
-
+  // position: absolute;
   @include font(var(--black), 'Phlatt Grotesk', 10rem, default, uppercase);
   // margin: 0 auto;
   @media (min-width: 1440px) {
