--- a/src/partials/header-section.html
+++ b/src/partials/header-section.html
@@ -24,8 +24,7 @@
       >музей</a
     >
   </nav>
-  <div class="M_search"></div>
-
+  <div class="W_search"></div>
   <svg
     class="A_burger"
     xmlns="http://www.w3.org/2000/svg"
