--- a/src/partials/rec-cards-tests.html
+++ b/src/partials/rec-cards-tests.html
@@ -2,7 +2,7 @@
   <h2 class="A_title-text">больше тестов</h2>
   <div class="C_tests">
     <div class="O_test-card">
-      <a href="tests/unusual-horse.html">
+      <a href="../tests/unusual-horse.html">
         <div class="O_card-text-content">
           <h4 class="A_card-title White">необычная лошадь</h4>
           <div class="C_tags White">
@@ -34,7 +34,7 @@
       </a>
     </div>
     <div class="O_test-card">
-      <a href="tests/unusual-horse.html">
+      <a href="../tests/just-lightning.html">
         <div class="O_card-text-content">
           <h4 class="A_card-title White">просто молния</h4>
           <div class="C_tags White">
@@ -49,7 +49,7 @@
       </a>
     </div>
     <div class="O_test-card">
-      <a href="tests/not-the-least-bit-weird.html">
+      <a href="../tests/not-the-least-bit-weird.html">
         <div class="O_card-text-content">
           <h4 class="A_card-title White">ни капельки ни странно</h4>
           <div class="C_tags White">
