form and fixing bugs

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -59,8 +59,17 @@
   </svg>
   <div class="W_form">
     <h6 class="A_form-message">оставайтесь на связи!</h6>
-    <form>
-      <input class="M_e-mail" type="text" placeholder="ваш e-mail..." />
+    <form action="https://formspree.io/f/mrbzzvka" method="POST">
+      <label>
+        Your email:
+        <input
+          type="email"
+          name="email"
+          class="M_e-mail"
+          placeholder="Ваш e-mail..."
+        />
+      </label>
+      <button type="submit">Send</button>
     </form>
   </div>
 </div>
