--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -58,17 +58,14 @@
     />
   </svg>
   <div class="W_form">
-    <h6 class="A_form-message">оставайтесь на связи!</h6>
+    <p class="A_form-message">Останемся на связи!</p>
     <form action="https://formspree.io/f/mrbzzvka" method="POST">
-      <label>
-        Your email:
-        <input
-          type="email"
-          name="email"
-          class="M_e-mail"
-          placeholder="Ваш e-mail..."
-        />
-      </label>
+      <input
+        type="email"
+        name="email"
+        class="M_e-mail"
+        placeholder="Ваш e-mail..."
+      />
       <button type="submit">Send</button>
     </form>
   </div>
