--- a/src/stylesheets/components/wrappers.scss
+++ b/src/stylesheets/components/wrappers.scss
@@ -14,7 +14,30 @@
   display: inline-flex;
   flex-direction: column;
   gap: 0.5rem;
-  width: 8rem;
+  width: 11rem;
+
+  button {
+    @include font(var(--orange), 'Phlatt Grotesk', 1rem);
+    padding: 0.2rem 0.8rem;
+    background-color: white;
+    border-radius: 36px;
+  }
+
+  p {
+    font-size: 12px;
+  }
+
+  input {
+    opacity: 0.6;
+    font-size: 12px;
+    padding-top: 0.3rem;
+  }
+
+  form {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+  }
 }
 
 .W_socialnet {
