--- a/src/components/O_searchBar/O_searchBar.scss
+++ b/src/components/O_searchBar/O_searchBar.scss
@@ -7,4 +7,13 @@
     max-height: 360px;
     z-index: 100;
   }
+  .М_SearchForm {
+    display: flex;
+    font-size: 24px;
+    padding: 0 1rem;
+    background-color: red;
+    div {
+      font-family: 'Phlatt Grotesk';
+    }
+  }
 }
