--- a/src/components/O_searchBar/O_searchBar.scss
+++ b/src/components/O_searchBar/O_searchBar.scss
@@ -1,6 +1,6 @@
 .O_searchBar {
   background-color: aqua;
-  .C_postTeasers {
+  .C_postSuggestions {
     position: absolute;
     background-color: white;
     overflow-y: scroll;
