--- a/src/stylesheets/styleguide.scss
+++ b/src/stylesheets/styleguide.scss
@@ -8,28 +8,47 @@ body.styleguide {
 
   #abs_img_1 {
     top: 17rem;
-    right: 0;
+    right: -10rem;
   }
 
   #abs_img_2 {
     top: 101rem;
-    left: 0;
+    left: -15rem;
   }
 
   #abs_img_3 {
     top: 240rem;
-    right: 0;
+    right: -15rem;
   }
 
   #abs_img_4 {
     top: 358rem;
-    left: 0;
+    left: -10rem;
+  }
+
+  @keyframes tilt-n-move-shaking {
+    0% {
+      transform: translate(0, 0) rotate(0deg);
+    }
+    25% {
+      transform: translate(5px, 5px) rotate(5deg);
+    }
+    50% {
+      transform: translate(0, 0) rotate(0eg);
+    }
+    75% {
+      transform: translate(-5px, 5px) rotate(-5deg);
+    }
+    100% {
+      transform: translate(0, 0) rotate(0deg);
+    }
   }
 
   .backImg {
-    width: 25%;
+    width: 40%;
     position: absolute;
     z-index: -100;
+    animation: tilt-n-move-shaking 5s infinite;
   }
 
   h1 {
