--- a/src/stylesheets/components/atoms.scss
+++ b/src/stylesheets/components/atoms.scss
@@ -102,6 +102,21 @@ h6 {
   }
 }
 
+#mainCoverImg {
+  position: absolute;
+  z-index: -20;
+  object-fit: cover;
+  width: 96%;
+  right: 0;
+  left: 0px;
+  /* text-align: center; */
+  margin-right: 0;
+  margin-left: 0;
+  margin: 0 auto;
+  height: 45rem;
+  border-radius: 2rem;
+}
+
 .A_card-cover {
   width: 15rem;
   height: 11rem;
