--- a/src/stylesheets/components/atoms.scss
+++ b/src/stylesheets/components/atoms.scss
@@ -447,7 +447,7 @@ h6 {
 
 .A_videos-cover {
   width: 32.125rem;
-  height: 18.875rem;
+  // height: 18.1rem;
   @include cover;
   &.Image-type {
     background-image: url('./././images/articles/article-kletki-dlya-detki.jpg');
